force-app/main/default/objects/CAP__c/CAP__c.object-meta.xml
<CustomObject>
    <description>Contains all Customer Action Plan Data supplied by Alix Partners for Visual Workflow</description>
    <label>CAP</label>
    <nameField>
        <label>CAP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CAPs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>