force-app/main/default/objects/CAP__c/fields/Category_Code__c.field-meta.xml
<CustomField>
    <fullName>Category_Code__c</fullName>
    <externalId>true</externalId>
    <label>Category Code</label>
    <length>26</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>