force-app/main/default/objects/CAP__c/fields/Display_Text_1__c.field-meta.xml
<CustomField>
    <fullName>Display_Text_1__c</fullName>
    <label>Display Text 1</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>