force-app/main/default/objects/CAP__c/fields/Field_Label_0__c.field-meta.xml
<CustomField>
    <fullName>Field_Label_0__c</fullName>
    <label>Field Label 0</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>