force-app/main/default/objects/CAP__c/fields/Field_Type_2__c.field-meta.xml
<CustomField>
    <fullName>Field_Type_2__c</fullName>
    <label>Field Type 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Field_Type_1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Radio Button</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>SKIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>