force-app/main/default/objects/CAP__c/fields/Help_Text_2__c.field-meta.xml
<CustomField>
    <fullName>Help_Text_2__c</fullName>
    <defaultValue>&quot;There is no additional help for this page. If you need assistance, please reach out to your manager&quot;</defaultValue>
    <label>Help Text 2</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>