force-app/main/default/objects/CAP__c/fields/Letter_Label_0__c.field-meta.xml
<CustomField>
    <fullName>Letter_Label_0__c</fullName>
    <label>Letter Label 0</label>
    <type>TextArea</type>
</CustomField>