force-app/main/default/objects/CAP__c/fields/Letter_Label_1__c.field-meta.xml
<CustomField>
    <fullName>Letter_Label_1__c</fullName>
    <label>Letter Label 1</label>
    <type>TextArea</type>
</CustomField>