force-app/main/default/objects/CAP__c/fields/Letter_Value_1__c.field-meta.xml
<CustomField>
    <fullName>Letter_Value_1__c</fullName>
    <label>Letter Value 1</label>
    <type>TextArea</type>
</CustomField>