force-app/main/default/objects/CAP__c/fields/Letter_Value_3__c.field-meta.xml
<CustomField>
    <fullName>Letter_Value_3__c</fullName>
    <label>Letter Value 3</label>
    <type>TextArea</type>
</CustomField>