force-app/main/default/objects/CAP__c/fields/Trigger__c.field-meta.xml
<CustomField>
    <fullName>Trigger__c</fullName>
    <label>Trigger</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Function__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>