force-app/main/default/objects/CAP__c/validationRules/No_Null_or_Blank_Picklists.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Null_or_Blank_Picklists</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISBLANK(TEXT(  Field_Type_1__c )),ISBLANK(TEXT(  Field_Type_2__c )),ISBLANK(TEXT(  Field_Type_3__c )),ISBLANK(TEXT(  Letter_0__c )),ISBLANK(TEXT(  Letter_1__c )),ISBLANK(TEXT(  Letter_2__c )),ISBLANK(TEXT(  Letter_3__c )),ISBLANK(TEXT(  Trigger__c )),ISBLANK(TEXT(  Business_Function__c )))</errorConditionFormula>
    <errorMessage>All picklists require data.</errorMessage>
</ValidationRule>