force-app/main/default/objects/CAP__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business_Function__c</columns>
    <columns>Trigger__c</columns>
    <columns>Field_Label_0__c</columns>
    <columns>Field_Label_1__c</columns>
    <columns>Field_Label_2__c</columns>
    <columns>Field_Label_3__c</columns>
    <columns>Field_Type_0__c</columns>
    <columns>Field_Type_1__c</columns>
    <columns>Field_Type_2__c</columns>
    <columns>Field_Type_3__c</columns>
    <columns>Letter_Label_0__c</columns>
    <columns>Letter_Label_1__c</columns>
    <columns>Letter_Label_2__c</columns>
    <columns>Letter_Label_3__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>